@@ -1,12 +1,15 @@
 package eu.xfsc.fc.core.service.verification;
 
+import static eu.xfsc.fc.core.service.verification.VerificationConstants.JWT_PREFIX;
+import static eu.xfsc.fc.core.service.verification.VerificationConstants.RDF_CONTEXT_KEY;
+import static eu.xfsc.fc.core.service.verification.VerificationConstants.VC_20_CONTEXT;
+
 import com.apicatalog.jsonld.loader.DocumentLoader;
 import com.apicatalog.jsonld.loader.SchemeRouter;
 import com.danubetech.keyformats.jose.JWK;
 import com.danubetech.verifiablecredentials.VerifiableCredential;
 import com.danubetech.verifiablecredentials.VerifiablePresentation;
 import com.danubetech.verifiablecredentials.jsonld.VerifiableCredentialKeywords;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import eu.xfsc.fc.api.generated.model.AssetStatus;
@@ -53,6 +56,7 @@ import java.nio.charset.StandardCharsets;
 import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
+import java.text.ParseException;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
@@ -84,12 +88,30 @@ import static eu.xfsc.fc.core.service.verification.TrustFrameworkBaseClass.UNKNO
 public class CredentialVerificationStrategy implements VerificationStrategy {
 
     private static final ClaimExtractor[] extractors = new ClaimExtractor[]{new TitaniumClaimExtractor(), new DanubeTechClaimExtractor()};
-    private static final String VC2_CONTEXT = "https://www.w3.org/ns/credentials/v2";
-    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+
+    private final ObjectMapper objectMapper;
+
+    /**
+     * Resolves the {@code type} or {@code @type} value from a JSON-LD map.
+     * ICAM 24.07: "{@code @type} is aliased to {@code type}. Consequently, we MAY also use this alias."
+     */
+    private static Object resolveType(Map<?, ?> map) {
+        Object val = map.get("type");
+        return val != null ? val : map.get("@type");
+    }
+
+    /**
+     * Resolves the {@code id} or {@code @id} value from a JSON-LD map.
+     * ICAM 24.07: "{@code @id} is aliased to {@code id}. Consequently, we MAY also use this alias."
+     */
+    private static Object resolveId(Map<?, ?> map) {
+        Object val = map.get("id");
+        return val != null ? val : map.get("@id");
+    }
 
     @Value("${federated-catalogue.verification.require-vp:true}")
     private boolean requireVP;
-    @Value("${federated-catalogue.verification.drop-validarors:false}")
+    @Value("${federated-catalogue.verification.drop-validators:false}")
     private boolean dropValidators;
 
     /**
@@ -120,6 +142,8 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
     private final Vc11Processor vc11Processor;
     private final Vc2Processor vc2Processor;
     private final JwtSignatureVerifier jwtSignatureVerifier;
+    private final FormatDetector formatDetector;
+    private final LoireJwtParser loireJwtParser;
 
     @Value("${federated-catalogue.verification.trust-framework.gaiax.trust-anchor-url:}")
     private String trustAnchorAddr;
@@ -152,6 +176,17 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         trustFrameworkBaseClassUris.put(PARTICIPANT, participantType);
     }
 
+    /**
+     * Pipeline state carried between verification phases.
+     */
+    private record VerificationContext(
+        String body,
+        CredentialFormat format,
+        boolean isJwt,
+        ContentAccessor payload,
+        Validator jwtValidator
+    ) {}
+
     public CredentialVerificationResult verifyCredential(ContentAccessor payload, boolean strict, TrustFrameworkBaseClass expectedClass,
                                                          boolean verifySemantics, boolean verifySchema, boolean verifyVPSignatures,
                                                          boolean verifyVCSignatures) throws VerificationException {
@@ -159,56 +194,123 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
                 strict, expectedClass, verifySemantics, verifySchema, verifyVPSignatures, verifyVCSignatures);
         long stamp = System.currentTimeMillis();
 
-        // Read content once (fixes double-read)
-        String body = payload.getContentAsString().strip();
-        payload = new ContentAccessorDirect(body, payload.getContentType());
-        boolean isJwt = jwtPreprocessor.isJwtWrapped(payload);
-        // JWT signature verification — fires before unwrap (Issue #12)
-        Validator jwtValidator = null;
-        if (isJwt && (verifyVCSignatures || verifyVPSignatures)) {
-            jwtValidator = jwtSignatureVerifier.verify(body);
-        }
-        // Version dispatch — payload is unwrapped JSON-LD after this point
-        // JWT-wrapped payloads are VC 2.0-only; fall back to vc2Processor when context parse fails
-        boolean isVc2 = isVc2Context(body) || isJwt;
-        payload = (isVc2 ? vc2Processor : vc11Processor).preProcess(payload);
-        // NOTE: CAT-FR-GD-02's VcStructureDetector.isVcStructured() call MUST be placed AFTER this
-        // line, not before — a JWT-wrapped VC 2.0 payload would not be recognised as a VC until unwrapped.
+        VerificationContext ctx = detectAndUnwrap(payload, verifyVCSignatures || verifyVPSignatures);
 
-        // syntactic validation
-        JsonLDObject ld = parseContent(payload);
+        // syntactic + semantic validation
+        JsonLDObject ld = parseContent(ctx.payload());
+        ld.setDocumentLoader(this.documentLoader);
         log.debug("verifyCredential; content parsed, time taken: {}", System.currentTimeMillis() - stamp);
 
-        // see https://gitlab.eclipse.org/eclipse/xfsc/cat/fc-service/-/issues/200
-        // add GAIA-X context(s) if present
-        ld.setDocumentLoader(this.documentLoader);
-
-        // semantic verification
-        long stamp2 = System.currentTimeMillis();
         TypedCredentials typedCredentials = parseCredentials(ld, strict && requireVP, verifySemantics);
-        log.debug("verifyCredential; credentials processed, time taken: {}", System.currentTimeMillis() - stamp2);
 
-        // Gate on gaiaxTrustFrameworkEnabled: non-Gaia-X VC 2.0 credentials have no known TrustFrameworkBaseClass
-        // TODO(gaia-x-loire): when Loire ontology support lands, resolveBaseClass should return the correct
-        //   Loire type for Gaia-X credentials. Remove this gate and let hasClasses() enforce the check unconditionally.
+        // TODO(loire-compatibility): CAT-FR-GD-01 part 3 - Loire Ontology Migration will update resolveBaseClass to handle 2511 namespace types.
         if (verifySemantics && gaiaxTrustFrameworkEnabled && !typedCredentials.hasClasses()) {
             throw new VerificationException("Semantic Error: no proper CredentialSubject found");
         }
 
+        TrustFrameworkBaseClass baseClass = resolvePrimaryBaseClass(typedCredentials, verifySemantics, expectedClass);
+
+        FilteredClaims filtered = extractAndValidateClaims(ctx.payload(), verifySemantics && strict);
+
+        if (verifySchema) {
+            validateSchema(filtered.claims());
+        }
+
+        List<Validator> validators = collectValidators(ctx, ld, typedCredentials,
+                verifySemantics, verifyVCSignatures, verifyVPSignatures);
+
+        CredentialVerificationResult result = assembleResult(baseClass, typedCredentials, filtered.claims(), validators);
+        if (filtered.hasWarning()) {
+            result.setWarnings(List.of(filtered.warning()));
+        }
+
+        stamp = System.currentTimeMillis() - stamp;
+        log.debug("verifyCredential.exit; returning: {}; time taken: {}", result, stamp);
+        return result;
+    }
+
+    public List<CredentialClaim> extractClaims(ContentAccessor payload) {
+        // Make sure our interceptors are in place.
+        initLoaders();
+        List<CredentialClaim> claims = null;
+        for (ClaimExtractor extra : extractors) {
+            try {
+                claims = extra.extractClaims(payload);
+                if (claims != null) {
+                    break;
+                }
+            } catch (Exception ex) {
+                log.error("extractClaims.error using {}", extra.getClass().getName(), ex);
+            }
+        }
+        return claims;
+    }
+
+    public void setBaseClassUri(TrustFrameworkBaseClass baseClass, String uri) {
+        trustFrameworkBaseClassUris.put(baseClass, uri);
+    }
+
+    /**
+     * Phase 1: Detect credential format, verify JWT signature, and unwrap to JSON-LD.
+     * After this method, the payload is always JSON-LD.
+     *
+     * <p>TODO: signature verification could move to a dedicated component when this class is split.
+     */
+    private VerificationContext detectAndUnwrap(ContentAccessor payload, boolean verifySigs) {
+        String body = payload.getContentAsString().strip();
+        payload = new ContentAccessorDirect(body, payload.getContentType());
+
+        CredentialFormat format = formatDetector.detect(payload);
+        // Reject ambiguous/unrecognizable JWTs — non-JWT payloads fall through to
+        // vc11Processor which provides more specific syntactic error messages.
+        if (format == CredentialFormat.UNKNOWN && body.startsWith(JWT_PREFIX)) {
+            throw new ClientException(
+                "Unrecognizable JWT credential format — JWT does not have recognized "
+                    + "typ header or vc/vp wrapper claims");
+        }
+        boolean isJwt = format == CredentialFormat.GAIAX_V2_LOIRE
+            || (format == CredentialFormat.VC2_DANUBETECH && body.startsWith(JWT_PREFIX));
+
+        Validator jwtValidator = null;
+        if (isJwt && verifySigs) {
+            jwtValidator = jwtSignatureVerifier.verify(body);
+        }
+
+        if (format == CredentialFormat.GAIAX_V2_LOIRE && gaiaxTrustFrameworkEnabled) {
+            enforceLoirePolicies(body, jwtValidator);
+        }
+
+        // Version dispatch — unwrap to JSON-LD
+        // NOTE: CAT-FR-GD-02's VcStructureDetector.isVcStructured() call MUST be placed AFTER
+        // unwrapping, not before — a JWT-wrapped VC 2.0 payload would not be recognised as a VC.
+        if (format == CredentialFormat.GAIAX_V2_LOIRE) {
+            payload = loireJwtParser.unwrap(payload);
+        } else if (format == CredentialFormat.GAIAX_V1_TAGUS) {
+            payload = vc11Processor.preProcess(payload);
+        } else if (format == CredentialFormat.VC2_DANUBETECH) {
+            payload = vc2Processor.preProcess(payload);
+        } else {
+            payload = vc11Processor.preProcess(payload);
+        }
+
+        return new VerificationContext(body, format, isJwt, payload, jwtValidator);
+    }
+
+    /**
+     * Phase 2: Resolve the dominant base class from typed credentials and validate type constraints.
+     */
+    private TrustFrameworkBaseClass resolvePrimaryBaseClass(TypedCredentials typedCredentials,
+        boolean verifySemantics, TrustFrameworkBaseClass expectedClass) {
         int partCount = 0;
         int soffCount = 0;
         TrustFrameworkBaseClass baseClass = UNKNOWN;
         Collection<TrustFrameworkBaseClass> baseClasses = typedCredentials.getBaseClasses();
+
         if (baseClasses.size() > 1) {
-            Map<TrustFrameworkBaseClass, Integer> classMap = baseClasses.stream().reduce(new HashMap<>(), (map, e) -> {
-                        map.merge(e, 1, Integer::sum);
-                        return map;
-                    },
-                    (m, m2) -> {
-                        m.putAll(m2);
-                        return m;
-                    }
-            );
+            Map<TrustFrameworkBaseClass, Integer> classMap = baseClasses.stream()
+                .reduce(new HashMap<>(),
+                    (map, e) -> { map.merge(e, 1, Integer::sum); return map; },
+                    (m, m2) -> { m.putAll(m2); return m; });
             partCount = classMap.getOrDefault(PARTICIPANT, 0);
             soffCount = classMap.getOrDefault(SERVICE_OFFERING, 0);
             if (partCount > 0) {
@@ -227,90 +329,110 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
                 throw new VerificationException("Semantic error: credential has several types: " + baseClasses);
             }
             if (expectedClass != UNKNOWN && baseClass != expectedClass) {
-                throw new VerificationException("Semantic error: expected credential of type " + expectedClass + " but found " + baseClass);
+                throw new VerificationException(
+                    "Semantic error: expected credential of type " + expectedClass + " but found " + baseClass);
             }
         }
+        return baseClass;
+    }
 
-        stamp2 = System.currentTimeMillis();
+    /**
+     * Phase 3: Extract claims, filter protected namespaces, and validate subject uniqueness.
+     */
+    private FilteredClaims extractAndValidateClaims(ContentAccessor payload, boolean strictSemantics) {
+        long stamp = System.currentTimeMillis();
         List<CredentialClaim> claims = extractClaims(payload);
-
         FilteredClaims filtered = protectedNamespaceFilter.filterClaims(claims, "claims extraction");
         claims = filtered.claims();
+        log.debug("verifyCredential; claims extracted: {}, time taken: {}",
+                (claims == null ? "null" : claims.size()), System.currentTimeMillis() - stamp);
 
-        log.debug("verifyCredential; claims extracted: {}, time taken: {}", (claims == null ? "null" : claims.size()),
-                System.currentTimeMillis() - stamp2);
+        if (strictSemantics) {
+            validateSubjectUniqueness(claims);
+        }
+        return filtered;
+    }
 
-        if (verifySemantics && strict) {
-            Set<String> subjects = new HashSet<>();
-            Set<String> objects = new HashSet<>();
-            if (claims != null && !claims.isEmpty()) {
-                for (CredentialClaim claim : claims) {
-                    subjects.add(claim.getSubjectString());
-                    objects.add(claim.getObjectString());
-                }
-            }
-            subjects.removeAll(objects);
-
-            if (subjects.size() > 1) {
-                String sep = System.lineSeparator();
-                StringBuilder sb = new StringBuilder("Semantic Errors: There are different subject ids in credential subjects: ").append(sep);
-                for (String s : subjects) {
-                    sb.append(s).append(sep);
-                }
-                throw new VerificationException(sb.toString());
-            } else if (subjects.isEmpty()) {
-                throw new VerificationException("Semantic Errors: There is no uniquely identified credential subject");
+    private void validateSubjectUniqueness(List<CredentialClaim> claims) {
+        Set<String> subjects = new HashSet<>();
+        Set<String> objects = new HashSet<>();
+        if (claims != null && !claims.isEmpty()) {
+            for (CredentialClaim claim : claims) {
+                subjects.add(claim.getSubjectString());
+                objects.add(claim.getObjectString());
             }
         }
+        subjects.removeAll(objects);
 
-        // schema verification
-        if (verifySchema) {
-            eu.xfsc.fc.core.pojo.SchemaValidationResult result = schemaValidationService.validateClaimsAgainstCompositeSchema(claims);
-            if (result == null || !result.isConforming()) {
-                throw new VerificationException("Schema error: " + (result == null ? "unknown" : result.getValidationReport()));
+        if (subjects.size() > 1) {
+            String sep = System.lineSeparator();
+            StringBuilder sb = new StringBuilder(
+                "Semantic Errors: There are different subject ids in credential subjects: ").append(sep);
+            for (String s : subjects) {
+                sb.append(s).append(sep);
             }
+            throw new VerificationException(sb.toString());
+        } else if (subjects.isEmpty()) {
+            throw new VerificationException("Semantic Errors: There is no uniquely identified credential subject");
         }
+    }
 
-        // VP JWT: detect VP type, run semantic holder check, and guard inner VC verification
+    private void validateSchema(List<CredentialClaim> claims) {
+        eu.xfsc.fc.core.pojo.SchemaValidationResult result =
+            schemaValidationService.validateClaimsAgainstCompositeSchema(claims);
+        if (result == null || !result.isConforming()) {
+            throw new VerificationException(
+                "Schema error: " + (result == null ? "unknown" : result.getValidationReport()));
+        }
+    }
+
+    /**
+     * Phase 4: Collect all signature validators — JWT outer, JWT inner VCs, and LD proofs.
+     */
+    private List<Validator> collectValidators(VerificationContext ctx, JsonLDObject ld,
+        TypedCredentials typedCredentials, boolean verifySemantics,
+        boolean verifyVCSignatures, boolean verifyVPSignatures) {
         boolean isVpJwt = false;
-        if (isJwt && jwtValidator != null) {
+        if (ctx.isJwt() && ctx.jwtValidator() != null) {
             try {
-                JWTClaimsSet jwtClaims = SignedJWT.parse(body).getJWTClaimsSet();
+                JWTClaimsSet jwtClaims = SignedJWT.parse(ctx.body()).getJWTClaimsSet();
                 isVpJwt = isVpJwtClaims(jwtClaims);
                 if (verifySemantics) {
                     checkVpJwtHolder(jwtClaims);
                 }
             } catch (java.text.ParseException ex) {
-                // body was already verified by JwtSignatureVerifier — unexpected
-                log.warn("verifyCredential; JWT claims re-parse error: {}", ex.getMessage());
+                log.warn("collectValidators; JWT claims re-parse error: {}", ex.getMessage());
             }
         }
 
-        // signature verification
-        List<Validator> validators;
-        if (isJwt) {
-            validators = jwtValidator != null ? new ArrayList<>(List.of(jwtValidator)) : null;
+        if (ctx.isJwt()) {
+            List<Validator> validators = ctx.jwtValidator() != null
+                ? new ArrayList<>(List.of(ctx.jwtValidator())) : new ArrayList<>();
             if (verifyVCSignatures && isVpJwt) {
-                List<Validator> innerValidators = verifyInnerVcCredentials(ld);
-                if (!innerValidators.isEmpty()) {
-                    if (validators == null) {
-                        validators = innerValidators;
-                    } else {
-                        validators.addAll(innerValidators);
-                    }
+                List<Validator> inner = verifyInnerVcCredentials(ld);
+                if (!inner.isEmpty()) {
+                    validators.addAll(inner);
                 }
             }
-        } else if (verifyVPSignatures || verifyVCSignatures) {
-            validators = checkCryptography(typedCredentials, verifyVPSignatures, verifyVCSignatures);
-        } else {
-            validators = null;
+            return validators;
         }
+        if (verifyVPSignatures || verifyVCSignatures) {
+            return checkCryptography(typedCredentials, verifyVPSignatures, verifyVCSignatures);
+        }
+        return List.of();
+    }
 
+    /**
+     * Phase 5: Build the typed result object based on the resolved base class.
+     */
+    private CredentialVerificationResult assembleResult(TrustFrameworkBaseClass baseClass,
+        TypedCredentials typedCredentials, List<CredentialClaim> claims, List<Validator> validators) {
         String id = typedCredentials.getID();
         String issuer = typedCredentials.getIssuer();
         Instant issuedDate = typedCredentials.getIssuanceDate();
+        Instant now = Instant.now();
+        String status = AssetStatus.ACTIVE.getValue();
 
-        CredentialVerificationResult result;
         if (baseClass == PARTICIPANT) {
             if (issuer == null) {
                 issuer = id;
@@ -318,26 +440,19 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
             String method = typedCredentials.getProofMethod();
             String holder = typedCredentials.getHolder();
             String name = holder == null ? issuer : holder;
-            result = new CredentialVerificationResultParticipant(Instant.now(), AssetStatus.ACTIVE.getValue(), issuer, issuedDate,
+            return new CredentialVerificationResultParticipant(now, status, issuer, issuedDate,
                     claims, validators, name, method);
-        } else if (baseClass == SERVICE_OFFERING) {
-            result = new CredentialVerificationResultOffering(Instant.now(), AssetStatus.ACTIVE.getValue(), issuer, issuedDate,
-                    id, claims, validators);
-        } else if (baseClass == RESOURCE) {
-            result = new CredentialVerificationResultResource(Instant.now(), AssetStatus.ACTIVE.getValue(), issuer, issuedDate,
-                    id, claims, validators);
-        } else {
-            result = new CredentialVerificationResult(Instant.now(), AssetStatus.ACTIVE.getValue(), issuer, issuedDate,
+        }
+        if (baseClass == SERVICE_OFFERING) {
+            return new CredentialVerificationResultOffering(now, status, issuer, issuedDate,
                     id, claims, validators);
         }
-
-        if (filtered.hasWarning()) {
-            result.setWarnings(List.of(filtered.warning()));
+        if (baseClass == RESOURCE) {
+            return new CredentialVerificationResultResource(now, status, issuer, issuedDate,
+                    id, claims, validators);
         }
-
-        stamp = System.currentTimeMillis() - stamp;
-        log.debug("verifyCredential.exit; returning: {}; time taken: {}", result, stamp);
-        return result;
+        return new CredentialVerificationResult(now, status, issuer, issuedDate,
+                id, claims, validators);
     }
 
     private TypedCredentials parseCredentials(JsonLDObject ld, boolean vpRequired, boolean verifySemantics) {
@@ -364,26 +479,6 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         throw new VerificationException("Semantic error: unexpected credential type: " + ld.getTypes());
     }
 
-    private boolean isVc2Context(String body) {
-        try {
-            JsonNode root = OBJECT_MAPPER.readTree(body);
-            JsonNode ctx = root.get("@context");
-            if (ctx == null) {
-                return false;
-            }
-            if (ctx.isArray()) {
-                for (JsonNode element : ctx) {
-                    if (VC2_CONTEXT.equals(element.asText())) {
-                        return true;
-                    }
-                }
-                return false;
-            }
-            return VC2_CONTEXT.equals(ctx.asText());
-        } catch (JsonProcessingException ex) {
-            return false;
-        }
-    }
 
     /* Credential parsing, semantic validation */
     private JsonLDObject parseContent(ContentAccessor content) {
@@ -399,7 +494,7 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         log.debug("verifyPresentation.enter; got presentation with id: {}", presentation.getId());
         StringBuilder sb = new StringBuilder();
         String sep = System.lineSeparator();
-        if (checkAbsence(presentation, "@context")) {
+        if (checkAbsence(presentation, RDF_CONTEXT_KEY)) {
             sb.append(" - VerifiablePresentation must contain '@context' property").append(sep);
         }
         if (checkAbsence(presentation, "type", "@type")) {
@@ -430,8 +525,8 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
     private String verifyCredential(VerifiableCredential credential, int idx) {
         StringBuilder sb = new StringBuilder();
         String sep = System.lineSeparator();
-        if (checkAbsence(credential, "@context")) {
-            sb.append(" - VerifiableCredential[").append(idx).append("] must contain '@context' property").append(sep);
+        if (checkAbsence(credential, RDF_CONTEXT_KEY)) {
+            sb.append(" - VerifiableCredential[").append(idx).append("] must contain ").append(RDF_CONTEXT_KEY).append(" property").append(sep);
         }
         if (checkAbsence(credential, "type", "@type")) {
             sb.append(" - VerifiableCredential[").append(idx).append("] must contain 'type' property").append(sep);
@@ -447,10 +542,10 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
     }
 
     private VersionedCredentialProcessor getVersionProcessor(VerifiableCredential credential) {
-        Object ctx = credential.getJsonObject().get("@context");
+        Object ctx = credential.getJsonObject().get(RDF_CONTEXT_KEY);
         boolean isVc2 = (ctx instanceof java.util.List<?>)
-                ? ((java.util.List<?>) ctx).contains(VC2_CONTEXT)
-                : VC2_CONTEXT.equals(ctx);
+                ? ((java.util.List<?>) ctx).contains(VC_20_CONTEXT)
+                : VC_20_CONTEXT.equals(ctx);
         return isVc2 ? vc2Processor : vc11Processor;
     }
 
@@ -467,36 +562,102 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         log.trace("getCredentials.enter; got VP: {}", vp);
         Object obj = vp.getJsonObject().get("verifiableCredential");
         Map<VerifiableCredential, TrustFrameworkBaseClass> creds;
-        if (obj == null) {
-            creds = Collections.emptyMap();
-        } else if (obj instanceof List) {
-            List<?> l = (List<?>) obj;
-            creds = new LinkedHashMap<>(l.size());
-            for (Object entry : l) {
-                if (entry instanceof String) {
-                    // Compact JWT VC — opaque for semantic processing; signatures handled by verifyInnerVcCredentials
-                    // TODO(gaia-x-loire): if Loire requires semantic validation of embedded JWT VCs, unwrap and
-                    //   resolve their base class here instead of skipping.
-                    continue;
+        switch (obj) {
+            case null -> creds = Collections.emptyMap();
+            case List<?> l -> {
+                creds = new LinkedHashMap<>(l.size());
+                for (Object entry : l) {
+                    if (entry instanceof String jwtStr) {
+                        VerifiableCredential unwrapped = tryUnwrapJwtVc(jwtStr, vp.getDocumentLoader());
+                        if (unwrapped != null) {
+                            creds.put(unwrapped, resolveBaseClass(unwrapped));
+                        }
+                        continue;
+                    }
+                    @SuppressWarnings("unchecked")
+                    Map<String, Object> entryMap = (Map<String, Object>) entry;
+                    if (isEnvelopedVerifiableCredential(resolveType(entryMap), entryMap.get(RDF_CONTEXT_KEY))) {
+                        VerifiableCredential unwrapped = tryUnwrapEnvelopedVc(entryMap, vp.getDocumentLoader());
+                        if (unwrapped != null) {
+                            creds.put(unwrapped, resolveBaseClass(unwrapped));
+                        }
+                        continue;
+                    }
+                    VerifiableCredential vc = VerifiableCredential.fromMap(entryMap);
+                    vc.setDocumentLoader(vp.getDocumentLoader());
+                    creds.put(vc, resolveBaseClass(vc));
                 }
-                @SuppressWarnings("unchecked")
-                VerifiableCredential vc = VerifiableCredential.fromMap((Map<String, Object>) entry);
-                vc.setDocumentLoader(vp.getDocumentLoader());
-                creds.put(vc, resolveBaseClass(vc));
             }
-        } else if (obj instanceof String) {
-            // Single compact JWT VC — opaque for semantic processing
-            // TODO(gaia-x-loire): same as list case above — unwrap if Loire requires semantic validation.
-            creds = Collections.emptyMap();
-        } else {
-            @SuppressWarnings("unchecked")
-            VerifiableCredential vc = VerifiableCredential.fromMap((Map<String, Object>) obj);
-            vc.setDocumentLoader(vp.getDocumentLoader());
-            creds = Map.of(vc, resolveBaseClass(vc));
+            case String jwtStr -> {
+                VerifiableCredential unwrapped = tryUnwrapJwtVc(jwtStr, vp.getDocumentLoader());
+                if (unwrapped != null) {
+                    creds = Map.of(unwrapped, resolveBaseClass(unwrapped));
+                } else {
+                    creds = Collections.emptyMap();
+                }
+            }
+            default -> {
+                @SuppressWarnings("unchecked")
+                VerifiableCredential vc = VerifiableCredential.fromMap((Map<String, Object>) obj);
+                vc.setDocumentLoader(vp.getDocumentLoader());
+                creds = Map.of(vc, resolveBaseClass(vc));
+            }
         }
         TypedCredentials tcs = new TypedCredentials(vp, creds);
         log.trace("getCredentials.exit; returning: {}", tcs);
         return tcs;
+    }
+
+    /**
+     * Attempts to unwrap an EnvelopedVerifiableCredential (Loire data: URI) to a VC.
+     */
+    private VerifiableCredential tryUnwrapEnvelopedVc(Map<String, Object> entryMap,
+        DocumentLoader docLoader) {
+        Object idObj = resolveId(entryMap);
+        if (!(idObj instanceof String idStr) || !idStr.startsWith("data:")) {
+            log.debug("tryUnwrapEnvelopedVc; no data: URI in EnvelopedVerifiableCredential");
+            return null;
+        }
+        try {
+            int commaIdx = idStr.indexOf(',');
+            if (commaIdx < 0) {
+                int semiIdx = idStr.indexOf(';');
+                if (semiIdx < 0) {
+                    return null;
+                }
+                commaIdx = semiIdx;
+            }
+            String jwtStr = idStr.substring(commaIdx + 1);
+            return tryUnwrapJwtVc(jwtStr, docLoader);
+        } catch (Exception ex) {
+            log.debug("tryUnwrapEnvelopedVc; failed to unwrap: {}", ex.getMessage());
+            return null;
+        }
+    }
+
+    /**
+     * Attempts to unwrap a compact JWT VC string to a VerifiableCredential for semantic processing.
+     */
+    private VerifiableCredential tryUnwrapJwtVc(String jwtStr, DocumentLoader docLoader) {
+        if (!jwtStr.startsWith(JWT_PREFIX)) {
+            return null;
+        }
+        try {
+            ContentAccessor jwtContent = new ContentAccessorDirect(jwtStr);
+            CredentialFormat innerFormat = formatDetector.detect(jwtContent);
+            ContentAccessor unwrapped;
+            if (innerFormat == CredentialFormat.GAIAX_V2_LOIRE) {
+                unwrapped = loireJwtParser.unwrap(jwtContent);
+            } else {
+                unwrapped = jwtPreprocessor.unwrap(jwtContent);
+            }
+            VerifiableCredential vc = VerifiableCredential.fromJson(unwrapped.getContentAsString());
+            vc.setDocumentLoader(docLoader);
+            return vc;
+        } catch (Exception ex) {
+            log.debug("tryUnwrapJwtVc; failed to unwrap JWT VC: {}", ex.getMessage());
+            return null;
+        }
     }
 
     private TypedCredentials getCredentials(VerifiableCredential vc) {
@@ -504,23 +665,6 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         TypedCredentials tcs = new TypedCredentials(null, Map.of(vc, resolveBaseClass(vc)));
         log.trace("getCredentials.exit; returning: {}", tcs);
         return tcs;
-    }
-
-    public List<CredentialClaim> extractClaims(ContentAccessor payload) {
-        // Make sure our interceptors are in place.
-        initLoaders();
-        List<CredentialClaim> claims = null;
-        for (ClaimExtractor extra : extractors) {
-            try {
-                claims = extra.extractClaims(payload);
-                if (claims != null) {
-                    break;
-                }
-            } catch (Exception ex) {
-                log.error("extractClaims.error using {}: {}", extra.getClass().getName(), ex.getMessage());
-            }
-        }
-        return claims;
     }
 
     private void initLoaders() {
@@ -553,10 +697,6 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
             }
         }
         return streamManager;
-    }
-
-    public void setBaseClassUri(TrustFrameworkBaseClass baseClass, String uri) {
-        trustFrameworkBaseClassUris.put(baseClass, uri);
     }
 
     private TrustFrameworkBaseClass resolveBaseClass(VerifiableCredential credential) {
@@ -623,7 +763,7 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
             return;
         }
         try {
-            // ICAM v24.07: holder is a top-level claim; older format: nested in vp claim
+            // ICAM v24.07 (Loire): holder is a top-level claim; older format: nested in vp claim
             String holder = claims.getStringClaim("holder");
             if (holder == null) {
                 @SuppressWarnings("unchecked")
@@ -633,9 +773,22 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
                 }
             }
             String iss = claims.getIssuer();
+            // Loire VPs: holder is optional per VCDM 2.0; when absent, the VP issuer (iss)
+            // is implicitly the holder. Also check top-level "issuer" claim as Loire fallback.
             if (holder == null) {
-                throw new VerificationException(
-                        "VP JWT missing 'holder' claim — iss/holder binding cannot be verified");
+                String issuerClaim = claims.getStringClaim("issuer");
+                if (issuerClaim != null && iss != null && !iss.equals(issuerClaim)) {
+                    throw new VerificationException(
+                        "VP JWT iss '" + iss + "' does not match VP issuer '" + issuerClaim + "'");
+                }
+                // holder absent: iss is implicitly the holder — binding passes
+                log.debug("checkVpJwtHolder; holder absent, iss '{}' accepted as implicit holder",
+                    iss);
+                return;
+            }
+            if (iss == null) {
+                log.warn("checkVpJwtHolder; VP JWT has holder '{}' but no iss claim", holder);
+                return;
             }
             if (!iss.equals(holder)) {
                 throw new VerificationException(
@@ -669,13 +822,13 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
 
         List<Validator> validators = new ArrayList<>();
         for (Object entry : vcEntries) {
-            if (entry instanceof String jwtStr && jwtStr.startsWith("eyJ")) {
+            if (entry instanceof String jwtStr && jwtStr.startsWith(JWT_PREFIX)) {
                 // Plain compact JWT string
                 validators.add(jwtSignatureVerifier.verify(jwtStr));
             } else if (entry instanceof Map<?, ?> vcMap) {
-                if (isEnvelopedVerifiableCredential(vcMap.get("type"), vcMap.get("@context"))) {
+                if (isEnvelopedVerifiableCredential(resolveType(vcMap), vcMap.get(RDF_CONTEXT_KEY))) {
                     // ICAM v24.07 EnvelopedVerifiableCredential: extract JWT from data: URL
-                    Object idObj = vcMap.get("id");
+                    Object idObj = resolveId(vcMap);
                     if (!(idObj instanceof String idStr)) {
                         throw new ClientException(
                                 "EnvelopedVerifiableCredential missing 'id' field");
@@ -694,8 +847,6 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         return validators;
     }
 
-    private static final String VC_2_CONTEXT = "https://www.w3.org/ns/credentials/v2";
-
     private boolean isEnvelopedVerifiableCredential(Object typeObj, Object contextObj) {
         boolean hasType = false;
         if (typeObj instanceof String typeStr) {
@@ -708,10 +859,10 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         }
         // Also verify the VC 2.0 context to avoid false-positives from other vocabularies
         if (contextObj instanceof String ctx) {
-            return VC_2_CONTEXT.equals(ctx);
+            return VC_20_CONTEXT.equals(ctx);
         }
         if (contextObj instanceof List<?> contexts) {
-            return contexts.contains(VC_2_CONTEXT);
+            return contexts.contains(VC_20_CONTEXT);
         }
         return false;
     }
@@ -777,6 +928,14 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         return validator;
     }
 
+    /**
+     * Fetches the certificate chain from the given x5u URL, validates certificate expiry,
+     * and checks the URI against the Gaia-X Trust Anchor Registry (when gaiax.enabled=true).
+     *
+     * <p>Note: does not perform PKIX path validation (RFC 5280) or revocation checking.
+     * ICAM 24.07 does not explicitly require these — it requires x5c/x5u presence (MUST)
+     * and x5u trust anchor resolution (SHOULD).
+     */
     @SuppressWarnings("unchecked")
     private Instant hasPEMTrustAnchorAndIsNotExpired(String uri) throws VerificationException {
         log.debug("hasPEMTrustAnchorAndIsNotExpired.enter; got uri: {}, gaiaxTrustFrameworkEnabled: {}", uri, gaiaxTrustFrameworkEnabled);
@@ -829,5 +988,132 @@ public class CredentialVerificationStrategy implements VerificationStrategy {
         Instant exp = relevant == null ? null : relevant.getNotAfter().toInstant();
         log.debug("hasPEMTrustAnchorAndIsNotExpired.exit; returning: {}", exp);
         return exp;
+    }
+
+    /**
+     * Enforces mandatory x5c/x5u trust chain validation for Loire credentials
+     * when Gaia-X trust framework is enabled (ICAM 24.07).
+     *
+     * @param jwtValidator the validator from JWT signature verification
+     * @throws VerificationException if x5c or x5u is missing in the publicKeyJwk
+     */
+    private void enforceLoirePolicies(String body, Validator jwtValidator) {
+        enforceDidWebRestriction(body);
+        if (jwtValidator != null) {
+            enforceLoireTrustChain(jwtValidator);
+        }
+    }
+
+    private void enforceLoireTrustChain(Validator jwtValidator) {
+        String publicKeyJson = jwtValidator.getPublicKey();
+        if (publicKeyJson == null) {
+            throw new VerificationException(
+                "Loire trust chain: publicKeyJwk is required but not available");
+        }
+        try {
+            JsonNode jwkNode = objectMapper.readTree(publicKeyJson);
+            boolean hasX5c = jwkNode.has("x5c") && !jwkNode.get("x5c").isEmpty();
+            boolean hasX5u = jwkNode.has("x5u") && !jwkNode.get("x5u").asText().isBlank();
+            if (!hasX5c && !hasX5u) {
+                throw new VerificationException(
+                    "Loire trust chain: publicKeyJwk must contain x5c or x5u certificate chain "
+                        + "(ICAM 24.07 mandatory trust anchor). kid: " + jwtValidator.getDidURI());
+            }
+            if (hasX5c) {
+                validateX5cChain(jwkNode.get("x5c"), jwtValidator.getDidURI());
+            }
+            if (hasX5u) {
+                String x5uUrl = jwkNode.get("x5u").asText();
+                hasPEMTrustAnchorAndIsNotExpired(x5uUrl);
+            }
+            log.debug("enforceLoireTrustChain; trust chain validated for kid: {}",
+                jwtValidator.getDidURI());
+        } catch (VerificationException ex) {
+            throw ex;
+        } catch (Exception ex) {
+            throw new VerificationException(
+                "Loire trust chain validation failed: " + ex.getMessage(), ex);
+        }
+    }
+
+    /**
+     * Validates certificates from the JWK {@code x5c} array: decodes base64 DER entries,
+     * checks each certificate is currently valid (not expired), and verifies that the chain
+     * is non-empty (ICAM 24.07).
+     *
+     * <p><strong>Known gap:</strong> validates certificate expiry only. Unlike the x5u path
+     * ({@link #hasPEMTrustAnchorAndIsNotExpired}), this does not call the Trust Anchor Registry
+     * because the registry API expects a URI, not inline certificates.
+     */
+    private void validateX5cChain(JsonNode x5cArray, String kid) {
+        if (!x5cArray.isArray() || x5cArray.isEmpty()) {
+            throw new VerificationException(
+                "Loire trust chain: x5c array is empty. kid: " + kid);
+        }
+        try {
+            CertificateFactory certFactory = CertificateFactory.getInstance("X.509");
+            for (JsonNode entry : x5cArray) {
+                byte[] certBytes;
+                try {
+                    certBytes = java.util.Base64.getDecoder().decode(entry.asText());
+                } catch (IllegalArgumentException ex) {
+                    throw new VerificationException(
+                        "Loire trust chain: x5c entry is not valid base64. kid: " + kid, ex);
+                }
+                X509Certificate cert = (X509Certificate) certFactory.generateCertificate(
+                    new ByteArrayInputStream(certBytes));
+                cert.checkValidity();
+            }
+            log.debug("validateX5cChain; {} certificate(s) valid for kid: {}",
+                x5cArray.size(), kid);
+        } catch (CertificateException ex) {
+            throw new VerificationException(
+                "Loire trust chain: x5c certificate validation failed: " + ex.getMessage(), ex);
+        }
+    }
+
+    /**
+     * Enforces the Loire DID method restriction: only {@code did:web} is accepted
+     * when Gaia-X trust framework is enabled (ICAM 24.07).
+     *
+     * @param compactJwt the original compact JWT body
+     * @throws VerificationException if the issuer uses a non-did:web DID method
+     */
+    private void enforceDidWebRestriction(String compactJwt) {
+        try {
+            JWTClaimsSet claims = SignedJWT.parse(compactJwt).getJWTClaimsSet();
+            String iss = claims.getIssuer();
+            String issuerClaim = claims.getStringClaim("issuer");
+            // Validate both when present — prevents spoofing via injected issuer claim
+            if (iss != null) {
+                validateDidWeb(iss);
+            }
+            if (issuerClaim != null && !issuerClaim.equals(iss)) {
+                validateDidWeb(issuerClaim);
+            }
+            if (iss == null && issuerClaim == null) {
+                throw new VerificationException(
+                    "Loire DID method restriction: no issuer found in JWT iss or payload issuer "
+                        + "(ICAM 24.07 requires did:web)");
+            }
+        } catch (VerificationException ex) {
+            throw ex;
+        } catch (ParseException ex) {
+            throw new VerificationException(
+                "Loire DID method restriction: JWT claims parse error: " + ex.getMessage(), ex);
+        }
+    }
+
+    private void validateDidWeb(String did) {
+        if (did.startsWith("did:key")) {
+            throw new VerificationException(
+                "Loire DID method restriction: did:key is not accepted "
+                    + "(ICAM 24.07 requires did:web with JWK + x5c/x5u). Issuer: " + did);
+        }
+        if (!did.startsWith("did:web:")) {
+            throw new VerificationException(
+                "Loire DID method restriction: only did:web is accepted "
+                    + "(ICAM 24.07). Found: " + did);
+        }
     }
 }
